--- a/css/style.css
+++ b/css/style.css
@@ -7810,7 +7810,7 @@ h1, h2, h3, h4, h5,
         height: 300px; } }
 
 .ftco-services {
-  background: url(../images/food.png) repeat;
+  background: url(../images/sub.jpg) repeat;
   color: #5c3d03; }
   .ftco-services .overlay {
     position: absolute;
