--- a/css/style.css
+++ b/css/style.css
@@ -7276,11 +7276,14 @@ body {
   color: gray;
   background: url(../images/bg_4.jpg) no-repeat fixed;
   background-size: cover; }
-  body.menu-show {
-    overflow: hidden;
-    position: fixed;
-    height: 100%;
-    width: 100%; }
+body.menu-show {
+  overflow-x: hidden;   /* only block horizontal scroll */
+  overflow-y: auto;     /* allow vertical scroll */
+  position: relative;   /* don’t fix the body */
+  height: auto;
+  width: 100%;
+}
+
 
 span {
   color: #bfbfbf; }
