--- a/scss/style.scss
+++ b/scss/style.scss
@@ -41,10 +41,11 @@ body {
 	background: url(../images/bg_4.jpg) no-repeat fixed;
 	background-size: cover;
 	&.menu-show {
-		overflow: hidden;
-		position: fixed;
-		height: 100%;
-		width: 100%;
+		    overflow-x: hidden;  // only block horizontal scroll
+    overflow-y: auto;    // allow vertical scroll
+    position: relative;  // don't fix the body
+    height: auto;
+    width: 100%;
 	}
 }
 span{
