--- a/scss/bootstrap/_reboot.scss
+++ b/scss/bootstrap/_reboot.scss
@@ -275,7 +275,7 @@ img {
 }
 
 svg:not(:root) {
-  overflow: hidden; // Hide the overflow in IE
+  overflow: auto; // Hide the overflow in IE
 }
 
 
