--- a/scss/bootstrap/_transitions.scss
+++ b/scss/bootstrap/_transitions.scss
@@ -17,6 +17,6 @@
 .collapsing {
   position: relative;
   height: 0;
-  overflow: hidden;
+  overflow: auto;
   @include transition($transition-collapse);
 }
