--- a/css/magnific-popup.css
+++ b/css/magnific-popup.css
@@ -5,7 +5,7 @@
   width: 100%;
   height: 100%;
   z-index: 1042;
-  overflow: hidden;
+  overflow: auto;
   position: fixed;
   background: #0b0b0b;
   opacity: 0.8; }
@@ -229,7 +229,7 @@ button::-moz-focus-inner {
 .mfp-iframe-scaler {
   width: 100%;
   height: 0;
-  overflow: hidden;
+  overflow: auto;
   padding-top: 56.25%; }
   .mfp-iframe-scaler iframe {
     position: absolute;
