--- a/scss/bootstrap/_modal.scss
+++ b/scss/bootstrap/_modal.scss
@@ -6,7 +6,7 @@
 
 // Kill the scroll on the body
 .modal-open {
-  overflow: hidden;
+  overflow: auto;
 }
 
 // Container that the modal scrolls within
@@ -18,7 +18,7 @@
   left: 0;
   z-index: $zindex-modal;
   display: none;
-  overflow: hidden;
+  overflow: auto;
   // Prevent Chrome on Windows from adding a focus outline. For details, see
   // https://github.com/twbs/bootstrap/pull/10951.
   outline: 0;
