--- a/scss/bootstrap/_progress.scss
+++ b/scss/bootstrap/_progress.scss
@@ -6,7 +6,7 @@
 .progress {
   display: flex;
   height: $progress-height;
-  overflow: hidden; // force rounded corners by cropping it
+  overflow: auto; // force rounded corners by cropping it
   font-size: $progress-font-size;
   background-color: $progress-bg;
   @include border-radius($progress-border-radius);
