--- a/scss/bootstrap/mixins/_nav-divider.scss
+++ b/scss/bootstrap/mixins/_nav-divider.scss
@@ -5,6 +5,6 @@
 @mixin nav-divider($color: $nav-divider-color, $margin-y: $nav-divider-margin-y) {
   height: 0;
   margin: $margin-y 0;
-  overflow: hidden;
+  overflow: auto;
   border-top: 1px solid $color;
 }
