--- a/scss/bootstrap/mixins/_screen-reader.scss
+++ b/scss/bootstrap/mixins/_screen-reader.scss
@@ -8,7 +8,7 @@
   width: 1px;
   height: 1px;
   padding: 0;
-  overflow: hidden;
+  overflow: auto;
   clip: rect(0, 0, 0, 0);
   white-space: nowrap;
   border: 0;
